update css, index; add sponsor footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,11 @@
         </section>
 
         <footer>
+		<div id="sponsors">
+			<a href="http://www.xbox.com/"><img src="/images/343.png"></a>
+			<a href="http://www.xbox.com/"><img src="/images/xbox.png"></a>
+			<a href="http://www.xbox.com/"><img src="/images/microsoft.png"></a>
+		</div>
         </footer>
 
       </div>
