--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,27 @@
 ---
 
 @import "{{ site.theme }}";
+
+header {
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
+
+#banner {
+	width: 100%;
+}
+
+body {
+	color: skyblue;
+	background: black;
+}
+
+#sponsors {
+	display: inline;
+}
+
+#sponsors a {
+	width: 25px;
+	padding: 2em;
+}
