update layouts, style, index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,28 +9,24 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <title>Halo 1.5 Released</title>
   </head>
-
-  <body>
-    <div id="container">
-      <div class="inner">
-
         <header>
 			<img id="banner" src="/images/banner.jpg">
         </header>
+  <body>
+    <div id="container">
+      <div class="inner">
         <section id="main_content">
           {{ content }}
         </section>
-
         <footer>
-		<div id="sponsors">
-			<a href="http://www.xbox.com/"><img src="/images/343.png"></a>
-			<a href="http://www.xbox.com/"><img src="/images/xbox.png"></a>
-			<a href="http://www.xbox.com/"><img src="/images/microsoft.png"></a>
-		</div>
+			<div id="sponsors">
+				<a href="http://www.halowaypoint.com/"><img src="/images/343.png"></a>
+				<a href="http://www.xbox.com/"><img src="/images/xbox.png"></a>
+				<a href="http://www.microsoft.com/games"><img src="/images/microsoft.png"></a>
+			</div>
         </footer>
-
       </div>
     </div>
 
