--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,16 +13,33 @@ header {
 	width: 100%;
 }
 
-body {
+body, #container {
 	color: skyblue;
 	background: black;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	color: blue;
+}
+
+#features {
+	display: inline;
+	float: left;
+	max-width: 50%;
+}
+
+#sidepic {
+	display: inline;
+	float: right;
+	max-width: 50%;
+}
+
 #sponsors {
 	display: inline;
+	background: grey;
 }
 
 #sponsors a {
-	width: 25px;
-	padding: 2em;
+	width: 15px;
+	padding: 1em;
 }
