--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <section id="main_content">
           {{ content }}
         </section>
-        <footer>
+        <footer class="greybackground">
 			<div id="sponsors">
 				<a href="http://www.halowaypoint.com/"><img src="/images/343.png"></a>
 				<a href="http://www.xbox.com/"><img src="/images/xbox.png"></a>
