--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,10 +13,11 @@ header {
 	width: 100%;
 }
 
-body, #container {
+body, #container, .inner {
 	color: skyblue;
 	background: rgb(22,22,22);
 	text-shadow: none;
+	width: 800px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -43,7 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 	display: inline;
 }
 
-#sponsors a {
-	width: 15px;
+#sponsors img {
+	max-width: 15px;
 	padding: 1em;
 }
