--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+hr {
+	background: black;
+}
+
 header {
 	padding: 0;
 	margin: 0;
@@ -28,6 +32,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .greybackground {
+	display: block;
 	background: grey;
 }
 
