update style, index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 	display: inline;
 	float: right;
 	max-width: 50%;
-	max-hight: 95%;
+	max-hight: 30px;
 }
 
 #sponsors {
