--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,14 +37,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #features {
-	display: inline;
 	float: left;
 	max-width: 50%;
 }
 
 #sidepic {
 	display: inline;
-	clear: right;
+	float: right;
 	max-width: 50%;
 }
 
