--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,16 +31,8 @@ h1, h2, h3, h4, h5, h6 {
 	color: blue;
 }
 
-.greybackground {
-	background: grey;
-	width: 100%;
-}
-
-#features {
-}
-
 #sidepic {
-
+	float: right;
 }
 
 #sponsors {
