--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ header {
 }
 
 body, #container {
-	color: skyblue;
+	color: rgb(240,240,255);
 	background: rgb(22,22,22);
 	text-shadow: none;
 }
@@ -28,7 +28,7 @@ body, #container {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	color: blue;
+	color: white;
 }
 
 .greybackground {
