update style, index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ header {
 }
 
 body, #container {
-	color: rgb(240,240,255);
+	color: rgb(200,200,255);
 	background: rgb(22,22,22);
 	text-shadow: none;
 }
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 .greybackground {
 	background: grey;
 	width: 100%;
-	padding: 1px;
+	margin: 1px;
 }
 
 #sidepic {
