--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ header {
 	width: 100%;
 }
 
-body, #container {
+body, i, #container {
 	color: rgb(200,200,255);
 	background: rgb(22,22,22);
 	text-shadow: none;
