--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,14 +33,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .greybackground {
 	background: grey;
-	width: 100%;
+	margin: 1px;
 }
 
 #sidepic {
 	float: right;
 }
 
-i {
-	margin: 1px 8px;
+i, img {
+	color: rgb(22,22,22)
+	margin: 2px 8px;
+	width: 20px;
 }
 
