--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,9 +40,13 @@ h1, h2, h3, h4, h5, h6 {
 	float: right;
 }
 
-i, img {
+i, {
 	color: rgb(22,22,22);
 	margin: 2px 8px;
 	width: 20px;
+}
+
+.greybackground img {
+	max-width: 50px;
 }
 
