--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,11 +42,10 @@ h1, h2, h3, h4, h5, h6 {
 
 i, {
 	color: rgb(22,22,22);
-	margin: 2px 8px;
-	width: 20px;
+	padding: 2px 8px;
 }
 
 .greybackground img {
-	max-width: 50px;
+	width: 50px;
 }
 
