--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .greybackground {
 	background: grey;
-	margin: 1px;
+	margin: 2px;
 }
 
 #sidepic {
@@ -46,6 +46,7 @@ i, {
 }
 
 .greybackground img {
-	width: 50px;
+	width: 80px;
+	padding: 5px;
 }
 
